--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -692,15 +692,166 @@ h3 {
     }
   }
 
+  // Função para criar o gráfico de apostas por dia
+  async function criarGrafico() {
+    const ctx = document.createElement("canvas");
+    document.getElementById("grafico").innerHTML = "";
+    document.getElementById("grafico").appendChild(ctx);
+
+    // Obter os últimos 7 dias
+    const datas = [];
+    for (let i = 6; i >= 0; i--) {
+      const data = new Date();
+      data.setDate(data.getDate() - i);
+      datas.push(data);
+    }
+
+    // Buscar todas as apostas
+    const apostasQuery = query(
+      collection(db, "apostas"),
+      orderBy("timestamp", "asc"),
+    );
+
+    const snapshot = await getDocs(apostasQuery);
+    const todasApostas = [];
+
+    snapshot.forEach((doc) => {
+      const data = doc.data();
+      todasApostas.push({
+        ...data,
+        id: doc.id,
+        timestamp: data.timestamp?.toDate() || new Date(),
+      });
+    });
+
+    // Calcular saldos diários
+    const saldosDiarios = datas.map((data) => {
+      const dataStr = data.toLocaleDateString("pt-BR");
+      const inicioDoDia = new Date(data.setHours(0, 0, 0, 0));
+      const fimDoDia = new Date(data.setHours(23, 59, 59, 999));
+
+      // Filtrar apostas para este dia
+      const apostasDoDia = todasApostas.filter((aposta) => {
+        return (
+          aposta.timestamp >= inicioDoDia && aposta.timestamp <= fimDoDia
+        );
+      });
+
+      // Calcular saldo para o dia
+      let saldoDoDia = 0;
+
+      apostasDoDia.forEach((aposta) => {
+        const stake = parseFloat(
+          aposta.stake.replace(/[^\d.,]/g, "").replace(",", "."),
+        );
+        const odds = parseFloat(aposta.odds.replace(",", "."));
+
+        switch (aposta.resultado) {
+          case "green":
+            saldoDoDia += stake * (odds - 1);
+            break;
+          case "red":
+            saldoDoDia -= stake;
+            break;
+          case "meio-green":
+            saldoDoDia += (stake / 2) * (odds - 1);
+            break;
+          case "meio-red":
+            saldoDoDia -= stake / 2;
+            break;
+        }
+      });
+
+      return {
+        data: dataStr,
+        saldo: saldoDoDia,
+      };
+    });
+
+    // Preparar dados para o gráfico
+    const labels = saldosDiarios.map((item) => item.data);
+    const dados = saldosDiarios.map((item) => item.saldo);
+
+    // Criar gráfico
+    new Chart(ctx, {
+      type: "line",
+      data: {
+        labels: labels,
+        datasets: [
+          {
+            label: "Saldo Diário",
+            data: dados,
+            borderColor: "#bb86fc",
+            backgroundColor: "rgba(187, 134, 252, 0.1)",
+            borderWidth: 3,
+            pointBackgroundColor: "#03dac6",
+            pointRadius: 5,
+            pointHoverRadius: 7,
+            tension: 0.2,
+            fill: true,
+          },
+        ],
+      },
+      options: {
+        responsive: true,
+        maintainAspectRatio: false,
+        plugins: {
+          legend: {
+            labels: {
+              color: "#e0e0e0",
+            },
+          },
+          tooltip: {
+            backgroundColor: "rgba(30, 30, 30, 0.9)",
+            titleColor: "#bb86fc",
+            bodyColor: "#e0e0e0",
+            callbacks: {
+              label: function (context) {
+                return "Saldo: " + formatarMoeda(context.raw);
+              },
+            },
+          },
+        },
+        scales: {
+          y: {
+            grid: {
+              color: "rgba(255, 255, 255, 0.1)",
+            },
+            ticks: {
+              color: "#e0e0e0",
+              callback: function (value) {
+                return formatarMoeda(value);
+              },
+            },
+          },
+          x: {
+            grid: {
+              color: "rgba(255, 255, 255, 0.1)",
+            },
+            ticks: {
+              color: "#e0e0e0",
+            },
+          },
+        },
+      },
+    });
+  }
+
   // Função para carregar as apostas do Firestore
   function carregarApostas() {
     const apostasLista = document.getElementById("apostas-lista");
-    apostasLista.innerHTML = '<div class="loading">Carregando apostas</div>';
+    apostasLista.innerHTML =
+      '<div class="loading">Carregando apostas</div>';
 
-    // Query para buscar todas as apostas ordenadas por data
+    const hoje = new Date();
+    const inicioDoDia = new Date(hoje.setHours(0, 0, 0, 0));
+    const fimDoDia = new Date(hoje.setHours(23, 59, 59, 999));
+
     const apostasRef = query(
       collection(db, "apostas"),
-      orderBy("timestamp", "desc")
+      where("timestamp", ">", inicioDoDia),
+      where("timestamp", "<", fimDoDia),
+      orderBy("timestamp", "desc"),
     );
 
     onSnapshot(apostasRef, (snapshot) => {
@@ -709,8 +860,10 @@ h3 {
       let todasApostas = [];
 
       if (snapshot.empty) {
-        apostasLista.innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Nenhuma aposta registrada</div>';
-        document.getElementById("grafico").innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Sem dados para exibir</div>';
+        apostasLista.innerHTML =
+          '<div style="text-align: center; padding: 15px; color: #888;">Nenhuma aposta registrada hoje</div>';
+        document.getElementById("grafico").innerHTML =
+          '<div style="text-align: center; padding: 15px; color: #888;">Sem dados para exibir</div>';
         return;
       }
 
@@ -723,10 +876,13 @@ h3 {
         const apostaItem = document.createElement("div");
         apostaItem.classList.add("aposta-item");
 
-        const stake = parseFloat(aposta.stake.replace(/[^\d.,]/g, "").replace(",", "."));
+        const stake = parseFloat(
+          aposta.stake.replace(/[^\d.,]/g, "").replace(",", "."),
+        );
         const odds = parseFloat(aposta.odds.replace(",", "."));
         let valorFinal = 0;
 
+        // Calcular ganhos/perdas
         switch (aposta.resultado) {
           case "green":
             valorFinal = stake * (odds - 1);
@@ -748,145 +904,33 @@ h3 {
 
         const statusClass = getStatusClass(aposta.resultado);
         const statusText = getStatusText(aposta.resultado);
-        const valorFinalText = valorFinal === 0 ? "" : ` (${formatarMoeda(valorFinal)})`;
-        const dataFormatada = aposta.timestamp ? new Date(aposta.timestamp.toDate()).toLocaleString('pt-BR') : '';
+        const valorFinalText =
+          valorFinal === 0 ? "" : ` (${formatarMoeda(valorFinal)})`;
 
         apostaItem.innerHTML = `
-          <div class="aposta-info">
-            <strong>${aposta.liga}</strong> · <span class="${statusClass}">${statusText}${valorFinalText}</span><br>
-            ${aposta.jogador1} vs ${aposta.jogador2}<br>
-            <small>${aposta.mercado} · Stake: ${formatarMoeda(stake)} · Odds: ${odds}</small><br>
-            <small style="color: #888;">${dataFormatada}</small>
-          </div>
-          <div class="aposta-actions">
-            <button onclick="removerAposta('${doc.id}')">Remover</button>
-          </div>
-        `;
+        <div class="aposta-info">
+          <strong>${aposta.liga}</strong> · <span class="${statusClass}">${statusText}${valorFinalText}</span><br>
+          ${aposta.jogador1} vs ${aposta.jogador2}<br>
+          <small>${aposta.mercado} · Stake: ${formatarMoeda(stake)} · Odds: ${odds}</small>
+        </div>
+        <div class="aposta-actions">
+          <button onclick="removerAposta('${doc.id}')">Remover</button>
+        </div>
+      `;
 
         apostasLista.appendChild(apostaItem);
       });
 
-      document.getElementById("ganho-total").innerHTML = `Ganho Total<strong>${formatarMoeda(ganhoTotal)}</strong>`;
-      document.getElementById("perda-total").innerHTML = `Perda Total<strong>${formatarMoeda(perdaTotal)}</strong>`;
-      document.getElementById("saldo-total").innerHTML = `Saldo Total<strong>${formatarMoeda(ganhoTotal - perdaTotal)}</strong>`;
+      // Atualizar resumo
+      document.getElementById("ganho-total").innerHTML =
+        `Ganho Total<strong>${formatarMoeda(ganhoTotal)}</strong>`;
+      document.getElementById("perda-total").innerHTML =
+        `Perda Total<strong>${formatarMoeda(perdaTotal)}</strong>`;
+      document.getElementById("saldo-total").innerHTML =
+        `Saldo Total<strong>${formatarMoeda(ganhoTotal - perdaTotal)}</strong>`;
 
-      criarGrafico(todasApostas);
-    });
-  }
-
-  // Função para criar o gráfico
-  async function criarGrafico(todasApostas) {
-    const ctx = document.createElement("canvas");
-    document.getElementById("grafico").innerHTML = "";
-    document.getElementById("grafico").appendChild(ctx);
-
-    const datas = [];
-    const hoje = new Date();
-    for (let i = 6; i >= 0; i--) {
-      const data = new Date(hoje);
-      data.setDate(data.getDate() - i);
-      datas.push(data);
-    }
-
-    const saldosDiarios = datas.map((data) => {
-      const dataStr = data.toLocaleDateString("pt-BR");
-      const inicioDoDia = new Date(data.setHours(0, 0, 0, 0));
-      const fimDoDia = new Date(data.setHours(23, 59, 59, 999));
-
-      const apostasDoDia = todasApostas.filter((aposta) => {
-        const apostaDate = aposta.timestamp?.toDate();
-        return apostaDate >= inicioDoDia && apostaDate <= fimDoDia;
-      });
-
-      let saldoDoDia = 0;
-      apostasDoDia.forEach((aposta) => {
-        const stake = parseFloat(aposta.stake.replace(/[^\d.,]/g, "").replace(",", "."));
-        const odds = parseFloat(aposta.odds.replace(",", "."));
-
-        switch (aposta.resultado) {
-          case "green":
-            saldoDoDia += stake * (odds - 1);
-            break;
-          case "red":
-            saldoDoDia -= stake;
-            break;
-          case "meio-green":
-            saldoDoDia += (stake / 2) * (odds - 1);
-            break;
-          case "meio-red":
-            saldoDoDia -= stake / 2;
-            break;
-        }
-      });
-
-      return {
-        data: dataStr,
-        saldo: saldoDoDia
-      };
-    });
-
-    const labels = saldosDiarios.map(item => item.data);
-    const dados = saldosDiarios.map(item => item.saldo);
-
-    new Chart(ctx, {
-      type: "line",
-      data: {
-        labels: labels,
-        datasets: [{
-          label: "Saldo Diário",
-          data: dados,
-          borderColor: "#bb86fc",
-          backgroundColor: "rgba(187, 134, 252, 0.1)",
-          borderWidth: 3,
-          pointBackgroundColor: "#03dac6",
-          pointRadius: 5,
-          pointHoverRadius: 7,
-          tension: 0.2,
-          fill: true
-        }]
-      },
-      options: {
-        responsive: true,
-        maintainAspectRatio: false,
-        plugins: {
-          legend: {
-            labels: {
-              color: "#e0e0e0"
-            }
-          },
-          tooltip: {
-            backgroundColor: "rgba(30, 30, 30, 0.9)",
-            titleColor: "#bb86fc",
-            bodyColor: "#e0e0e0",
-            callbacks: {
-              label: function(context) {
-                return "Saldo: " + formatarMoeda(context.raw);
-              }
-            }
-          }
-        },
-        scales: {
-          y: {
-            grid: {
-              color: "rgba(255, 255, 255, 0.1)"
-            },
-            ticks: {
-              color: "#e0e0e0",
-              callback: function(value) {
-                return formatarMoeda(value);
-              }
-            }
-          },
-          x: {
-            grid: {
-              color: "rgba(255, 255, 255, 0.1)"
-            },
-            ticks: {
-              color: "#e0e0e0"
-            }
-          }
-        }
-      }
+      // Criar gráfico por dia
+      criarGrafico();
     });
   }
 
