--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -677,73 +677,86 @@
     }
 
     // Função para carregar as apostas (ajustada para mostrar todas)
-    async function carregarApostas() {
-      if (!currentUser) return;
+    function carregarApostas() {
+      const apostasLista = document.getElementById("apostas-lista");
+      apostasLista.innerHTML = '<div class="loading">Carregando apostas</div>';
 
-      const apostasRef = collection(db, "apostas");
-      const q = query(
-        apostasRef,
-        where("userEmail", "==", currentUser),
-        orderBy("timestamp", "desc")  // Removido filtro de data
+      const apostasRef = query(
+        collection(db, "apostas"),
+        orderBy("timestamp", "desc")
       );
 
-      try {
-        const querySnapshot = await getDocs(q);
-        const apostas = [];
-        querySnapshot.forEach((doc) => {
-          apostas.push({ id: doc.id, ...doc.data() });
+      onSnapshot(apostasRef, (snapshot) => {
+        let ganhoTotal = 0;
+        let perdaTotal = 0;
+        let todasApostas = [];
+
+        if (snapshot.empty) {
+          apostasLista.innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Nenhuma aposta registrada</div>';
+          document.getElementById("grafico").innerHTML = '<div style="text-align: center; padding: 15px; color: #888;">Sem dados para exibir</div>';
+          return;
+        }
+
+        apostasLista.innerHTML = "";
+
+        snapshot.forEach((doc) => {
+          const aposta = doc.data();
+          todasApostas.push({ ...aposta, id: doc.id });
+
+          const apostaItem = document.createElement("div");
+          apostaItem.classList.add("aposta-item");
+
+          const stake = parseFloat(aposta.stake.toString().replace(/[^\d.,]/g, "").replace(",", "."));
+          const odds = parseFloat(aposta.odds.toString().replace(",", "."));
+          let valorFinal = 0;
+
+          switch (aposta.resultado) {
+            case "green":
+              valorFinal = stake * (odds - 1);
+              ganhoTotal += valorFinal;
+              break;
+            case "red":
+              valorFinal = -stake;
+              perdaTotal += stake;
+              break;
+            case "meio-green":
+              valorFinal = (stake / 2) * (odds - 1);
+              ganhoTotal += valorFinal;
+              break;
+            case "meio-red":
+              valorFinal = -stake / 2;
+              perdaTotal += stake / 2;
+              break;
+          }
+
+          const statusClass = getStatusClass(aposta.resultado);
+          const statusText = getStatusText(aposta.resultado);
+          const valorFinalText = valorFinal === 0 ? "" : ` (${formatarMoeda(valorFinal)})`;
+          const dataFormatada = aposta.timestamp?.toDate().toLocaleString('pt-BR') || '';
+
+          apostaItem.innerHTML = `
+            <div class="aposta-info">
+              <strong>${aposta.liga}</strong> · <span class="${statusClass}">${statusText}${valorFinalText}</span><br>
+              ${aposta.jogador1} vs ${aposta.jogador2}<br>
+              <small>${aposta.mercado} · Stake: ${formatarMoeda(stake)} · Odds: ${odds}</small><br>
+              <small>${dataFormatada}</small>
+            </div>
+            <div class="aposta-actions">
+              <button onclick="removerAposta('${doc.id}')">Remover</button>
+            </div>
+          `;
+
+          apostasLista.appendChild(apostaItem);
         });
 
-        renderizarApostas(apostas);
-        atualizarResumo(apostas);
-        await criarGrafico(apostas);
-      } catch (error) {
-        console.error("Erro ao carregar apostas:", error);
-      }
-    }
+        // Atualizar resumo
+        document.getElementById("ganho-total").innerHTML = `Ganho Total<strong>${formatarMoeda(ganhoTotal)}</strong>`;
+        document.getElementById("perda-total").innerHTML = `Perda Total<strong>${formatarMoeda(perdaTotal)}</strong>`;
+        document.getElementById("saldo-total").innerHTML = `Saldo Total<strong>${formatarMoeda(ganhoTotal - perdaTotal)}</strong>`;
 
-    function renderizarApostas(apostas) {
-      const apostasLista = document.getElementById("apostas-lista");
-
-      if (apostas.length === 0) {
-        apostasLista.innerHTML = '<div class="history-empty">Nenhuma aposta registrada</div>';
-        return;
-      }
-
-      apostasLista.innerHTML = apostas.map(aposta => {
-        const valor = calcularValorAposta(aposta.stake, aposta.odds, aposta.resultado);
-        const valorText = valor === 0 ? '' : ` (${formatarMoeda(valor)})`;
-
-        return `
-          <div class="history-item">
-            <div class="history-item-header">
-              <div>
-                <span class="history-item-title">${aposta.liga}</span>
-                <span class="status-${aposta.resultado} status-badge">
-                  ${getStatusText(aposta.resultado)}${valorText}
-                </span>
-                <div class="history-item-players">
-                  ${aposta.jogador1} vs ${aposta.jogador2}
-                </div>
-                <div class="history-item-details">
-                  ${aposta.mercado} · Stake: ${formatarMoeda(aposta.stake)} · Odds: ${aposta.odds}
-                </div>
-                <div class="history-item-date">
-                  ${formatarData(aposta.timestamp.toDate())}
-                </div>
-              </div>
-              <button class="remove-button remove-bet" data-id="${aposta.id}">
-                <svg class="icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <polyline points="3 6 5 6 21 6"></polyline>
-                  <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
-                  <line x1="10" y1="11" x2="10" y2="17"></line>
-                  <line x1="14" y1="11" x2="14" y2="17"></line>
-                </svg>
-              </button>
-            </div>
-          </div>
-        `;
-      }).join("");
+        // Criar gráfico
+        criarGrafico(todasApostas);
+      });
     }
 
     function getStatusText(resultado) {
@@ -757,179 +770,137 @@
       return statusMap[resultado] || resultado;
     }
 
-    function calcularValorAposta(stake, odds, resultado) {
-      const stakeNum = parseFloat(stake);
-      const oddsNum = parseFloat(odds);
-
-      switch (resultado) {
-        case 'green':
-          return stakeNum * (oddsNum - 1);
-        case 'red':
-          return -stakeNum;
-        case 'meio-green':
-          return (stakeNum / 2) * (oddsNum - 1);
-        case 'meio-red':
-          return -stakeNum / 2;
-        case 'reembolso':
-          return 0;
-        default:
-          return 0;
-      }
-    }
-
-    function atualizarResumo(apostas) {
-      let ganhoTotal = 0;
-      let perdaTotal = 0;
-
-      apostas.forEach(aposta => {
-        const stake = parseFloat(aposta.stake.toString().replace(/[^\d.,]/g, "").replace(",", "."));
-        const odds = parseFloat(aposta.odds.toString().replace(",", "."));
-        let valorFinal = 0;
-
-        switch (aposta.resultado) {
-          case "green":
-            valorFinal = stake * (odds - 1);
-            ganhoTotal += valorFinal;
-            break;
-          case "red":
-            valorFinal = -stake;
-            perdaTotal += stake;
-            break;
-          case "meio-green":
-            valorFinal = (stake / 2) * (odds - 1);
-            ganhoTotal += valorFinal;
-            break;
-          case "meio-red":
-            valorFinal = -stake / 2;
-            perdaTotal += stake / 2;
-            break;
-        }
-      });
-
-      const saldoTotal = ganhoTotal - perdaTotal;
-
-      document.getElementById("ganho-total").textContent = formatarMoeda(ganhoTotal);
-      document.getElementById("perda-total").textContent = formatarMoeda(perdaTotal);
-      document.getElementById("saldo-total").textContent = formatarMoeda(saldoTotal);
+    function getStatusClass(resultado) {
+      const statusMap = {
+        'green': 'status-green',
+        'red': 'status-red',
+        'meio-green': 'status-green',
+        'meio-red': 'status-red',
+        'reembolso': 'status-green'
+      };
+      return statusMap[resultado] || 'status-green';
     }
 
     async function criarGrafico(apostas) {
-      if (!currentUser) return;
+      const ctx = document.createElement("canvas");
+      document.getElementById("grafico").innerHTML = "";
+      document.getElementById("grafico").appendChild(ctx);
 
-      const dataLimite = new Date();
-      dataLimite.setDate(dataLimite.getDate() - 7);
-
-      const q = query(
-        collection(db, "apostas"),
-        where("userEmail", "==", currentUser),
-        where("timestamp", ">=", dataLimite),
-        orderBy("timestamp", "asc")
-      );
-
-      try {
-        const querySnapshot = await getDocs(q);
-        const dados = processarDadosGrafico(apostas);
-        renderizarGrafico(dados);
-      } catch (error) {
-        console.error("Erro ao criar gráfico:", error);
-      }
-    }
-
-    function processarDadosGrafico(apostas) {
+      // Obter os últimos 7 dias
       const datas = [];
-      const valores = [];
-      let saldoAcumulado = 0;
-
-      // Criar array com últimos 7 dias
       for (let i = 6; i >= 0; i--) {
         const data = new Date();
         data.setDate(data.getDate() - i);
-        data.setHours(0, 0, 0, 0);
-        datas.push(data.toLocaleDateString("pt-BR"));
-
-        // Filtrar apostas do dia
-        const apostasDoDia = apostas.filter(aposta => {
-          const dataAposta = aposta.timestamp.toDate();
-          return dataAposta.toDateString() === data.toDateString();
-        });
-
-        // Calcular saldo do dia
-        let saldoDia = 0;
-        apostasDoDia.forEach(aposta => {
-          saldoDia += calcularValorAposta(aposta.stake, aposta.odds, aposta.resultado);
-        });
-
-        saldoAcumulado += saldoDia;
-        valores.push(saldoAcumulado);
+        datas.push(data);
       }
 
-      return {
-        labels: datas,
-        datasets: [{
-          label: 'Saldo Acumulado',
-          data: valores,
-          borderColor: '#a78bfa',
-          backgroundColor: 'rgba(167, 139, 250, 0.1)',
-          tension: 0.4,
-          fill: true
-        }]
-      };
-    }
+      // Calcular saldos diários
+      const saldosDiarios = datas.map((data) => {
+        const dataStr = data.toLocaleDateString("pt-BR");
+        const inicioDoDia = new Date(data.setHours(0, 0, 0, 0));
+        const fimDoDia = new Date(data.setHours(23, 59, 59, 999));
 
-    function renderizarGrafico(dados) {
-      const ctx = document.getElementById('grafico');
+        // Filtrar apostas para este dia
+        const apostasDoDia = apostas.filter((aposta) => {
+          const dataAposta = aposta.timestamp?.toDate() || new Date();
+          return dataAposta >= inicioDoDia && dataAposta <= fimDoDia;
+        });
 
-      if (chart) {
-        chart.destroy();
-      }
+        // Calcular saldo para o dia
+        let saldoDoDia = 0;
 
-      chart = new Chart(ctx, {
-        type: 'line',
-        data: dados,
+        apostasDoDia.forEach((aposta) => {
+          const stake = parseFloat(aposta.stake.toString().replace(/[^\d.,]/g, "").replace(",", "."));
+          const odds = parseFloat(aposta.odds.toString().replace(",", "."));
+
+          switch (aposta.resultado) {
+            case "green":
+              saldoDoDia += stake * (odds - 1);
+              break;
+            case "red":
+              saldoDoDia -= stake;
+              break;
+            case "meio-green":
+              saldoDoDia += (stake / 2) * (odds - 1);
+              break;
+            case "meio-red":
+              saldoDoDia -= stake / 2;
+              break;
+          }
+        });
+
+        return {
+          data: dataStr,
+          saldo: saldoDoDia,
+        };
+      });
+
+      // Preparar dados para o gráfico
+      const labels = saldosDiarios.map((item) => item.data);
+      const dados = saldosDiarios.map((item) => item.saldo);
+
+      // Criar gráfico
+      new Chart(ctx, {
+        type: "line",
+        data: {
+          labels: labels,
+          datasets: [
+            {
+              label: "Saldo Diário",
+              data: dados,
+              borderColor: "#bb86fc",
+              backgroundColor: "rgba(187, 134, 252, 0.1)",
+              borderWidth: 3,
+              pointBackgroundColor: "#03dac6",
+              pointRadius: 5,
+              pointHoverRadius: 7,
+              tension: 0.2,
+              fill: true,
+            },
+          ],
+        },
         options: {
           responsive: true,
           maintainAspectRatio: false,
           plugins: {
             legend: {
-              display: false
+              labels: {
+                color: "#e0e0e0",
+              },
             },
             tooltip: {
-              backgroundColor: '#1f2937',
-              titleColor: '#a78bfa',
-              bodyColor: '#fff',
-              borderColor: '#374151',
-              borderWidth: 1,
-              padding: 10,
-              displayColors: false,
+              backgroundColor: "rgba(30, 30, 30, 0.9)",
+              titleColor: "#bb86fc",
+              bodyColor: "#e0e0e0",
               callbacks: {
                 label: function (context) {
-                  return formatarMoeda(context.parsed.y);
-                }
-              }
-            }
+                  return "Saldo: " + formatarMoeda(context.raw);
+                },
+              },
+            },
           },
           scales: {
             y: {
               grid: {
-                color: 'rgba(255, 255, 255, 0.1)'
+                color: "rgba(255, 255, 255, 0.1)",
               },
               ticks: {
-                color: '#a78bfa',
+                color: "#e0e0e0",
                 callback: function (value) {
                   return formatarMoeda(value);
-                }
-              }
+                },
+              },
             },
             x: {
               grid: {
-                display: false
+                color: "rgba(255, 255, 255, 0.1)",
               },
               ticks: {
-                color: '#a78bfa'
-              }
-            }
-          }
-        }
+                color: "#e0e0e0",
+              },
+            },
+          },
+        },
       });
     }
 
@@ -944,7 +915,6 @@
 
           data.data.forEach(match => {
             const liga = match.leagueName;
-
             if (!jogadoresPorLiga[liga]) {
               jogadoresPorLiga[liga] = new Set();
             }
@@ -953,7 +923,7 @@
             if (match.away) jogadoresPorLiga[liga].add(match.away);
           });
 
-          // Criar datalists para autocomplete
+          // Criar datalists para cada liga
           Object.keys(jogadoresPorLiga).forEach(liga => {
             const datalist = document.createElement('datalist');
             datalist.id = `jogadores-${liga.replace(/\s+/g, '-').toLowerCase()}`;
