--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -356,7 +356,7 @@
     <div class="app-container">
       <!-- Cabeçalho -->
       <header class="header">
-        <h1 class="app-title">Aposta Moderna</h1>
+        <h1 class="app-title">Gerenciamento</h1>
         <div class="user-info">
           <div class="user-avatar" id="user-avatar"></div>
           <span id="user-email"></span>
